--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# MY
+migrations/
+
 # Created by https://www.toptal.com/developers/gitignore/api/venv,python,django,windows,macos,linux,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=venv,python,django,windows,macos,linux,visualstudiocode
 
